...
                                <rect key="frame" x="88" y="154" width="143" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="143" id="Iqv-Tg-Dh4"/>
                                    <constraint firstAttribute="height" constant="30" id="UIb-x2-bL5"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                <state key="normal" title="Photo Display"/>
                                <connections>
                                    <action selector="clickPhotoDisplayAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="4Iq-PR-HqF"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="H54-j1-7KL">
                                <rect key="frame" x="88" y="203" width="143" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="8BG-Wr-cMZ"/>
                                    <constraint firstAttribute="width" constant="143" id="hu0-hn-9Ph"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                <state key="normal" title="Photo Picker"/>
                                <connections>
                                    <action selector="clickPhotoPickerAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="DLI-Ue-XdU"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
...
